[package]
name = "kithara-integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false
autotests = false
build = "build.rs"

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["serial_test"]

# Cross-platform dependencies (used by both native and WASM tests)
[dependencies]
kithara = { workspace = true, features = ["full", "probe"] }
kithara-audio = { workspace = true, features = ["probe", "symphonia"] }
kithara-abr = { workspace = true, features = ["probe"] }
kithara-assets = { workspace = true }
kithara-bufpool = { workspace = true }
kithara-drm = { workspace = true }
kithara-events = { workspace = true }
kithara-hls = { workspace = true, features = ["probe"] }
kithara-queue = { workspace = true, features = ["backend-cpal", "probe"] }
kithara-app = { workspace = true, default-features = false, features = ["lib-only"] }
kithara-test-utils = { workspace = true, features = ["mock", "probe"] }
rkyv = { workspace = true }
kithara-net = { workspace = true, features = ["mock", "probe"] }
kithara-platform = { workspace = true }
kithara-storage = { workspace = true }
kithara-stream = { workspace = true, features = ["probe"] }
# Async runtime

# Channels/buffers
bytes = { workspace = true }

# HTTP/URL
url = { workspace = true }

# Testing framework
tempfile = { workspace = true }
serial_test = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto (for HLS encryption tests)
aes = { workspace = true }
cbc = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }

# Misc
futures = { workspace = true }

# Async traits
async-trait = { workspace = true }

# --- Native-only dependencies ---
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara = { workspace = true }
# fdk-aac пришёл из kithara-decode defaults до Phase 2 (workspace
# default-features=false). HE-AAC v2 fMP4 фикстуры в rapid-scrub /
# stress-seek тестах декодятся через symphonia path, и без fdk-aac
# отдается LC-only — добавляем явно.
kithara-decode = { workspace = true, features = ["mock", "probe", "symphonia", "fdk-aac"] }
kithara-encode = { workspace = true }
kithara-file = { workspace = true }
kithara-play = { workspace = true, features = ["backend-cpal"] }
firewheel = { workspace = true }
num-traits = { workspace = true }

# Additional tokio features (full runtime on native)
tokio = { workspace = true, features = ["full"] }

# HTTP server (axum stack not available on WASM)
reqwest = { workspace = true, features = ["rustls", "stream"] }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
moka = { workspace = true }

# Seeded RNG for user-simulation e2e scenarios. Tests in
# `tests/tests/kithara_queue/user_simulation/` need a deterministic
# random stream so failures stay reproducible across CI re-runs.
rand = { workspace = true }

# Mocking
unimock = { workspace = true }

# Storage
mmap-io = { workspace = true }

# WebDriver automation
thirtyfour = { workspace = true }

# Performance monitoring (optional)
hotpath = { workspace = true, optional = true }

# RSS memory profiling
memory-stats = { workspace = true }
assert_no_alloc = { workspace = true }
ringbuf = { workspace = true }
tokio-stream = { workspace = true }

# --- Apple hardware backend (macOS/iOS only) ---
# Forwarded so `DecoderBackend::Apple` is in scope for tests that
# parametrise over backends. The variant is `#[cfg]`-gated on
# `feature = "apple"` + matching `target_os`, so without these entries
# the test crate cannot reference it.
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
kithara = { workspace = true, features = ["apple"] }
kithara-audio = { workspace = true, features = ["apple"] }
kithara-decode = { workspace = true, features = ["apple"] }
kithara-play = { workspace = true, features = ["apple"] }

# --- Android hardware backend (android only) ---
[target.'cfg(target_os = "android")'.dependencies]
kithara-audio = { workspace = true, features = ["android"] }
kithara-decode = { workspace = true, features = ["android"] }

# --- WASM-only dependencies ---
[target.'cfg(target_arch = "wasm32")'.dependencies]
kithara-test-macros = { workspace = true }

# WASM-specific
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen-test = { workspace = true }
web-sys = { workspace = true }
gloo-timers = { workspace = true }
tracing-wasm = { workspace = true }
console_error_panic_hook = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { workspace = true }

[features]
perf = [
    "dep:hotpath",
    "hotpath/hotpath",
    "kithara/perf",
]
# Cross-decoder protocol/factory tests gate on the underlying
# `kithara-decode` backends. Declare them locally so `--check-cfg`
# does not flag `#[cfg(feature = "apple"/"symphonia")]` in
# `tests/tests/kithara_decode/*`.
apple = ["kithara/apple", "kithara-audio/apple"]
symphonia = ["kithara/symphonia", "kithara-audio/symphonia"]
# End-to-end tests that require real networks and real audio hardware.
# Gated off by default so `just test` never compiles `suite_e2e`.
e2e = []
# Selenium-driven WebDriver tests. Gated off by default so `just test`
# doesn't try to spin up trunk + chromedriver. Run via `just test-selenium`.
selenium = []
# Deterministic virtual-clock test mode. Routes the platform's blocking waits
# (`thread::park_timeout`, `sync::Condvar`) onto the quiescence engine so timed
# waits collapse to virtual time. Off by default; enabling it compiles every
# path-dep against the virtual `kithara_platform::time::Instant`. Used by the
# phase-continuity equivalence proof.
flash-time = ["kithara-platform/flash-time"]

[[bin]]
name = "test_server"
path = "bin/test_server.rs"
test = false

[[bin]]
name = "fixture-cache-setup"
path = "bin/fixture-cache-setup.rs"
test = false

[[bin]]
name = "wasm_test_runner"
path = "bin/wasm_test_runner.rs"
test = false

[[test]]
name = "red_env_guard_leak_thread"
path = "tests/red_env_guard_leak_thread.rs"

[[test]]
name = "suite_light"
path = "tests/suite_light.rs"

[[test]]
name = "suite_heavy"
path = "tests/suite_heavy.rs"

[[test]]
name = "suite_stress"
path = "tests/suite_stress.rs"

[[test]]
name = "suite_e2e"
path = "tests/suite_e2e.rs"
required-features = ["e2e"]

[[test]]
name = "suite_perf"
path = "perf/suite_perf.rs"
required-features = ["perf"]

[[test]]
name = "memory_rss"
path = "perf/memory_rss.rs"
required-features = ["perf"]

[[bench]]
name = "refactor_hotpaths"
harness = false

[[bench]]
name = "bufpool"
harness = false

[[bench]]
name = "abr_estimator"
harness = false
