[package]
name = "kithara-integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false
autotests = false
build = "build.rs"

[package.metadata.cargo-machete]
ignored = ["serial_test"]

[[bin]]
name = "test_server"
path = "bin/test_server.rs"
test = false

[[bin]]
name = "fixture-cache-setup"
path = "bin/fixture-cache-setup.rs"
test = false

[[bin]]
name = "wasm_test_runner"
path = "bin/wasm_test_runner.rs"
test = false

[features]
perf = ["dep:hotpath", "hotpath/hotpath", "kithara/perf"]
# End-to-end tests that require real networks and real audio hardware.
# Gated off by default so `just test` never compiles `suite_e2e`. Real devices
# run at arbitrary sample rates, so every e2e lane in .config/xtask.toml pairs
# this with a fixed-ratio SRC backend (rubato / glide / apple fused).
e2e = []
# Selenium-driven WebDriver tests. Gated off by default so `just test`
# doesn't try to spin up trunk + chromedriver. Run via `just test-selenium`.
selenium = []
# Deterministic virtual-clock test mode. Routes the platform's blocking waits
# (`thread::park_timeout`, `sync::Condvar`) onto the quiescence engine so timed
# waits collapse to virtual time. Off by default; enabling it compiles every
# path-dep against the virtual `kithara::platform::time::Instant`. Used by the
# phase-continuity equivalence proof.
flash = ["kithara/flash", "kithara-test-utils/flash"]
# Poll-blocking detector; enabled by `just test --no-block=on`.
no-block = ["kithara/no-block", "kithara-test-utils/no-block"]
# Run integration tests with the native Apple HTTP backend (`NSURLSession`).
# This is separate from `apple`, which only brings Apple decode/audio variants
# into scope for tests.
apple-net = ["kithara/apple-net"]
apple-fused-src = ["kithara/apple-fused-src"]

# Cross-platform dependencies (used by both native and WASM tests)
[dependencies]
kithara = { workspace = true, features = ["full", "queue", "probe", "mock", "symphonia"] }
kithara-test-utils = { workspace = true, features = ["mock", "probe", "hang"] }

# Crypto (for HLS encryption tests)
aes = { workspace = true }

# Async traits
async-trait = { workspace = true }
base64 = { workspace = true }

# Misc
bon = { workspace = true }

# Channels/buffers
bytes = { workspace = true }
cbc = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
rkyv = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Testing framework
serial_test = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP/URL
url = { workspace = true }
uuid = { workspace = true }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "macos"), not(target_os = "ios"), not(target_os = "android")))'.dependencies]
kithara = { workspace = true, features = ["client-reqwest", "tls-rustls"] }

# --- Apple hardware backend (macOS/iOS only) ---
# Forwarded so `DecoderBackend::Apple` is in scope for tests that
# parametrise over backends. The variant is `#[cfg]`-gated on
# `feature = "apple"` + matching `target_os`, so without these entries
# the test crate cannot reference it.
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
kithara = { workspace = true, features = ["apple", "client-wreq"] }

# --- Native-only dependencies ---
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara = { workspace = true, features = ["backend-cpal", "fdk-aac", "stretch-bungee", "stretch-signalsmith", "tokio-net", "tokio-rt-multi-thread"] }
kithara-app = { workspace = true, default-features = false, features = ["analysis-waveform", "lib-only"] }
# fdk-aac came from kithara-decode defaults before Phase 2 (workspace
# default-features=false). HE-AAC v2 fMP4 fixtures in rapid-scrub /
# stress-seek tests decode through the symphonia path, and without fdk-aac
# they are reported as LC-only, so add it explicitly.
kithara-encode = { workspace = true }

assert_no_alloc = { workspace = true }
axum = { workspace = true }
firewheel = { workspace = true }

# Performance monitoring (optional)
hotpath = { workspace = true, optional = true }

# RSS memory profiling
memory-stats = { workspace = true }

# Storage
mmap-io = { workspace = true }
moka = { workspace = true }
num-traits = { workspace = true }

# Seeded RNG for user-simulation e2e scenarios. Tests in
# `tests/tests/kithara_queue/user_simulation/` need a deterministic
# random stream so failures stay reproducible across CI re-runs.
rand = { workspace = true }

# HTTP server (axum stack not available on WASM)
reqwest = { workspace = true, features = ["rustls", "stream"] }
ringbuf = { workspace = true }

# WebDriver automation
thirtyfour = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Mocking
unimock = { workspace = true }

# --- WASM-only dependencies ---
[target.'cfg(target_arch = "wasm32")'.dependencies]
kithara = { workspace = true, features = ["backend-web-audio", "client-reqwest", "webcodecs"] }

console_error_panic_hook = { workspace = true }
gloo-timers = { workspace = true }

# WASM-specific
js-sys = { workspace = true }
reqwest = { workspace = true }
tracing-wasm = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen-test = { workspace = true }
web-sys = { workspace = true }

# --- Android hardware backend (android only) ---
[target.'cfg(target_os = "android")'.dependencies]
kithara = { workspace = true, features = ["android", "client-wreq"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { workspace = true }

[lints]
workspace = true

[[test]]
name = "red_env_guard_leak_thread"
path = "tests/red_env_guard_leak_thread.rs"

[[test]]
name = "loom"
path = "tests/loom.rs"

[[test]]
name = "suite_light"
path = "tests/suite_light.rs"

[[test]]
name = "suite_wasm"
path = "tests/suite_wasm.rs"

[[test]]
name = "suite_heavy"
path = "tests/suite_heavy.rs"

[[test]]
name = "suite_stress"
path = "tests/suite_stress.rs"

[[test]]
name = "suite_e2e"
path = "tests/suite_e2e.rs"
required-features = ["e2e"]

[[test]]
name = "suite_perf"
path = "perf/suite_perf.rs"
required-features = ["perf"]

[[test]]
name = "memory_rss"
path = "perf/memory_rss.rs"
required-features = ["perf"]

[[bench]]
name = "refactor_hotpaths"
harness = false

[[bench]]
name = "perf_audit"
harness = false

[[bench]]
name = "bufpool"
harness = false

[[bench]]
name = "abr_estimator"
harness = false
