[package]
name = "xtask"
version = "0.0.1-alpha3"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
clap = { workspace = true }
cargo_metadata = { workspace = true }
anyhow = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
plist = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustdoc-types = { workspace = true }
toml = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits", "visit"] }
quote = { workspace = true }
proc-macro2 = { workspace = true, features = ["span-locations"] }
kithara-workspace-hack = { version = "0.0.1-alpha3", path = "../crates/kithara-workspace-hack" }

[dev-dependencies]
tempfile = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["kithara-workspace-hack"]

[lints]
workspace = true
