[package]
name = "xtask"
version = "0.0.1-alpha4"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata.cargo-machete]
ignored = ["kithara-workspace-hack"]

[dependencies]
kithara-workspace-hack = { version = "0.0.1-alpha4", path = "../crates/kithara-workspace-hack" }

anyhow = { workspace = true }
cargo_metadata = { workspace = true }
clap = { workspace = true }
glob = { workspace = true }
plist = { workspace = true }
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote = { workspace = true }
regex = { workspace = true }
rustdoc-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits", "visit"] }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
