[package]
name = "xtask"
version = "0.0.1-alpha4"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
kithara-devtools = { workspace = true }

anyhow = { workspace = true }
cargo_metadata = { workspace = true }
clap = { workspace = true }
fs4 = { workspace = true }
glob = { workspace = true }
nix = { workspace = true }
plist = { workspace = true }
regex = { workspace = true }
rustdoc-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
signal-hook = { workspace = true }
syn = { workspace = true, features = ["full", "visit"] }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
