[package]
name = "kithara-abr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Protocol-agnostic adaptive bitrate algorithm for audio streaming."
keywords = ["abr", "streaming", "hls", "audio", "bitrate"]
categories = ["multimedia::audio", "network-programming"]

[dependencies]
bon = { workspace = true }
dashmap = { workspace = true }
kithara-events = { workspace = true }
kithara-platform = { workspace = true }
kithara-test-utils = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
unimock = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.0.1-alpha3", path = "../kithara-workspace-hack" }

[features]
# No-op shim retained so `#[kithara::probe]` macro expansions
# (which emit `cfg(any(test, feature = "probe"))`) don't trigger
# `unexpected_cfgs` warnings on this crate. No production code is
# gated by this feature; the canonical test escape hatch was removed
# in plan async-juggling-plum.md.
probe = []
mock = []

[dev-dependencies]
kithara-test-utils = { path = "../kithara-test-utils", features = ["mock", "probe"] }
wasm-bindgen-test = { workspace = true }
proptest = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { workspace = true }

[lints]
workspace = true
