[package]
name = "kithara-app"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
publish = false

[lints]
workspace = true

[features]
default = ["tui", "gui"]
tui = ["dep:ratatui", "dep:crossterm"]
gui = ["dep:iced"]
# NN beat/downbeat detection.
beat-nn = ["kithara/beat-nn"]
# Build kithara-app as a plain library — exposes `config`/`sources`/`drm`
# modules without pulling in iced/ratatui. Used by integration tests
# (`tests/tests/kithara_queue/real_playlist.rs`).
lib-only = []
# Native-only C++ time-stretch backends, opt-in (need a C++ toolchain).
stretch-signalsmith = ["kithara/stretch-signalsmith"]
stretch-bungee = ["kithara/stretch-bungee"]
# Enable both stretch libraries in the DJ deck's selector.
stretch-all = ["stretch-signalsmith", "stretch-bungee"]

[dependencies]
kithara = { workspace = true, features = ["file", "hls"] }
kithara-drm = { workspace = true }
kithara-platform = { workspace = true }
kithara-queue = { workspace = true, features = ["backend-cpal"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bytes = { workspace = true }
clap = { workspace = true }
crabtime = { workspace = true }
bon = { workspace = true }
crossterm = { workspace = true, optional = true }
iced = { workspace = true, optional = true }
kithara-workspace-hack = { version = "0.0.1-alpha2", path = "../kithara-workspace-hack" }
num-traits = { workspace = true }
obfstr = { workspace = true }
rand = { workspace = true }
ratatui = { workspace = true, optional = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
kithara = { workspace = true, features = ["apple"] }

# Desktop (non-Apple, non-Android, native) — fall back to symphonia
# software decoding. workspace.dependencies now disables kithara's
# defaults at the workspace level, so without this target.cfg
# `cargo build` on Linux/Windows would leave the binary with no audio
# backend at all.
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "macos"), not(target_os = "ios"), not(target_os = "android")))'.dependencies]
kithara = { workspace = true, features = ["symphonia", "fdk-aac"] }

[dev-dependencies]
kithara-net = { workspace = true }
kithara-test-macros = { workspace = true }
kithara-test-utils = { workspace = true, features = ["mock", "probe"] }
futures = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
serde = { workspace = true }
serde_yml = { workspace = true }

[[bin]]
name = "kithara"
path = "src/main.rs"
