[package]
name = "kithara-app"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "kithara"
path = "src/main.rs"

[features]
default = ["tui", "gui", "analysis-waveform", "beat-nn", "stretch-signalsmith"]
tui = ["dep:ratatui", "dep:crossterm"]
# HTTP backend forwarding to every kithara-net-reaching production dep
# (kithara facade + kithara-queue). NOT in `default`: the backend is selected
# per target (macOS desktop pulls `apple` + `client-wreq`; other desktops
# pull client-reqwest via the non-Apple target block below), so exactly one
# HTTP stack lands in each build. The dev-only kithara-net mirrors the same
# per-target split (see the target `dev-dependencies` below) so test builds
# stay single-stack too.
client-reqwest = ["kithara/client-reqwest", "kithara-queue/client-reqwest"]
client-wreq = ["kithara/client-wreq", "kithara-queue/client-wreq"]
tls-rustls = ["kithara/tls-rustls", "kithara-queue/tls-rustls"]
tls-native = ["kithara/tls-native", "kithara-queue/tls-native"]
gui = ["dep:iced"]
# NN beat/downbeat detection.
beat-nn = ["kithara/beat-nn"]
# Waveform analysis for the deck overview.
analysis-waveform = ["kithara/analysis-waveform"]
# Build kithara-app as a plain library — exposes `config`/`sources`/`drm`
# modules without pulling in iced/ratatui. Used by integration tests
# (`tests/tests/kithara_queue/real_playlist.rs`).
lib-only = []
# Production Apple decode shape: embedded AudioConverter SRC inside the Apple
# codec. Opt-in so the default desktop build keeps the Rubato adapter path.
apple-fused-src = ["kithara/apple-fused-src"]
# Native-only C++ time-stretch backends. Signalsmith is the default; bungee
# stays opt-in (need a C++ toolchain).
stretch-signalsmith = ["kithara/stretch-signalsmith"]
stretch-bungee = ["kithara/stretch-bungee"]
# Enable both stretch libraries in the DJ deck's selector.
stretch-all = ["stretch-signalsmith", "stretch-bungee"]

[dependencies]
kithara = { workspace = true, default-features = false, features = ["file", "hls", "resample-rubato"] }
kithara-drm = { workspace = true }
kithara-platform = { workspace = true }
kithara-queue = { workspace = true, default-features = false, features = ["backend-cpal"] }
kithara-test-utils = { workspace = true }
kithara-ui = { workspace = true }

fieldwork = { workspace = true }

# Desktop binary deps. Gated off iOS as well as wasm: kithara-app is a
# desktop-only binary (TUI/GUI, no iOS audio backend), so none of these —
# notably tracing-subscriber/env-filter, which drags in regex — should resolve
# for the iOS framework closure. Keeping them off iOS lets the workspace-hack
# leave env-filter (and regex/regex-automata/aho-corasick) out of the iOS build.
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "ios")))'.dependencies]
kithara-platform = { workspace = true, features = ["signal"] }
kithara-workspace-hack = { version = "0.0.1-alpha4", path = "../kithara-workspace-hack" }

bon = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
crabtime = { workspace = true }
crossterm = { workspace = true, optional = true }
derive_more = { workspace = true }
iced = { workspace = true, optional = true }
num-traits = { workspace = true }
obfstr = { workspace = true }
rand = { workspace = true }
ratatui = { workspace = true, optional = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }

# Desktop (non-Apple, non-Android, native) — fall back to symphonia
# software decoding. workspace.dependencies now disables kithara's
# defaults at the workspace level, so without this target.cfg
# `cargo build` on Linux/Windows would leave the binary with no audio
# backend at all.
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "macos"), not(target_os = "ios"), not(target_os = "android")))'.dependencies]
kithara = { workspace = true, default-features = false, features = ["symphonia", "fdk-aac", "client-reqwest", "tls-rustls"] }

[target.'cfg(target_os = "macos")'.dependencies]
kithara = { workspace = true, default-features = false, features = ["apple", "client-wreq"] }

[build-dependencies]
serde = { workspace = true }
serde_yml = { workspace = true }

[dev-dependencies]
kithara-test-macros = { workspace = true }
kithara-test-utils = { workspace = true, features = ["mock", "probe", "hang"] }

futures = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "macos"), not(target_os = "ios"), not(target_os = "android")))'.dev-dependencies]
kithara-net = { workspace = true, default-features = false, features = ["client-reqwest", "tls-rustls"] }

# Dev-only kithara-net mirrors the per-target production backend so test
# builds stay single-stack: macOS tests run wreq (matching the `apple`
# production path), every other desktop runs client-reqwest. Without this
# split a fixed client-reqwest dev-dep would unify with the macOS wreq
# production path and compile both stacks into the test binary.
[target.'cfg(target_os = "macos")'.dev-dependencies]
kithara-net = { workspace = true, default-features = false, features = ["client-wreq"] }

[lints]
workspace = true
