[package]
name = "kithara-apple"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Apple platform ABI and safe wrappers shared by Kithara crates."
keywords = ["apple", "audio", "audiotoolbox", "accelerate"]
categories = ["multimedia::audio", "os::macos-apis"]

[dependencies]
thiserror = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.0.1-alpha4", path = "../kithara-workspace-hack" }

[lints]
workspace = true
