[package]
name = "kithara-apple"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Apple platform ABI and safe wrappers shared by Kithara crates."
keywords = ["apple", "audio", "audiotoolbox", "accelerate"]
categories = ["multimedia::audio", "os::macos-apis"]

[features]
default = []
accelerate = []
audio-toolbox = []
foundation = ["dep:block2", "dep:objc2", "dep:objc2-foundation"]

[dependencies]
kithara-platform = { workspace = true }

num-traits = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
block2 = { workspace = true, optional = true }
objc2 = { workspace = true, optional = true }
objc2-foundation = { workspace = true, optional = true, features = [
    "std",
    "block2",
    "NSData",
    "NSDate",
    "NSDictionary",
    "NSError",
    "NSOperation",
    "NSObject",
    "NSString",
    "NSArray",
    "NSURL",
    "NSURLAuthenticationChallenge",
    "NSURLCredential",
    "NSURLProtectionSpace",
    "NSURLRequest",
    "NSURLResponse",
    "NSURLSession",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.0.1-alpha4", path = "../kithara-workspace-hack" }

[lints]
workspace = true
