[package]
name = "kithara-assets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Disk cache with lease/pin semantics and LRU eviction."
keywords = ["cache", "lru", "storage", "audio", "disk"]
categories = ["caching"]

[lints]
workspace = true

[features]
probe = []
mock = []

[dependencies]
rkyv = { workspace = true }
bitflags = { workspace = true }
bon = { workspace = true }
dashmap = { workspace = true }
delegate = { workspace = true }
hex = { workspace = true }
kithara-bufpool = { workspace = true }
kithara-storage = { workspace = true }
kithara-test-macros = { workspace = true }
lru = { workspace = true }
kithara-platform = { workspace = true }
rangemap = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
unimock = { workspace = true }
url = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.0.1-alpha3", path = "../kithara-workspace-hack" }
tempfile = { workspace = true }

[dev-dependencies]
kithara-drm = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
kithara-assets = { path = "." }
tempfile = { workspace = true }
serial_test = { workspace = true }
kithara-test-utils = { path = "../kithara-test-utils", features = ["mock", "probe"] }
wasm-bindgen-test = { workspace = true }
