[package]
name = "kithara-assets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Disk cache with lease/pin semantics and LRU eviction."
keywords = ["cache", "lru", "storage", "audio", "disk"]
categories = ["caching"]

[features]
default = ["client-reqwest", "tls-rustls"]
probe = []
mock = []
# HTTP backend forwarding. kithara-assets reaches the single kithara-net
# package only through kithara-storage -> kithara-test-utils -> kithara-events
# (downloader event types). These forwards give kithara-net a backend in
# standalone builds; workspace-level default-features = false keeps the
# default off when kithara-assets is a transitive dep (apple/android wreq-only).
client-reqwest = ["kithara-storage/client-reqwest"]
client-wreq = ["kithara-storage/client-wreq"]
tls-rustls = ["kithara-storage/tls-rustls"]
tls-native = ["kithara-storage/tls-native"]

[dependencies]
kithara-bufpool = { workspace = true }
kithara-events = { workspace = true, features = ["asset"] }
kithara-platform = { workspace = true }
kithara-storage = { workspace = true }
kithara-test-macros = { workspace = true }
kithara-test-utils = { workspace = true }

bitflags = { workspace = true }
bon = { workspace = true }
dashmap = { workspace = true }
delegate = { workspace = true }
fieldwork = { workspace = true }
hex = { workspace = true }
lru = { workspace = true }
rangemap = { workspace = true }
rkyv = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
unimock = { workspace = true }
url = { workspace = true }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
kithara-workspace-hack = { version = "0.0.1-alpha4", path = "../kithara-workspace-hack" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tempfile = { workspace = true }

[dev-dependencies]
kithara-assets = { path = "." }
kithara-drm = { workspace = true }
kithara-test-utils = { path = "../kithara-test-utils", features = ["mock", "probe", "hang"] }

aes = { workspace = true }
cbc = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
wasm-bindgen-test = { workspace = true }

[lints]
workspace = true
