[package]
name = "kithara-audio"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Audio pipeline with OS thread worker, effects chain, and resampling"

[lints]
workspace = true

[dependencies]
derivative = { workspace = true }
derive_setters = { workspace = true }
kithara-decode = { workspace = true }
kithara-events = { workspace = true }
kithara-stream = { workspace = true }
kithara-storage = { workspace = true }
kithara-bufpool = { workspace = true }
biquad = { workspace = true }
rubato = { workspace = true }
audioadapter-buffers = { workspace = true }
smallvec = { workspace = true }
fallible-iterator = { workspace = true }
tokio-util = { workspace = true }
ringbuf = { workspace = true }
rodio = { workspace = true, optional = true }
tracing = { workspace = true }
kithara-platform = { workspace = true }
fast-interleave = { workspace = true }
hotpath = { workspace = true, optional = true }
unimock = { workspace = true, optional = true }

[features]
default = []
test-utils = ["unimock"]
internal = []
# Enable rodio::Source adapter for playback
rodio = ["dep:rodio"]
# Enable performance monitoring with hotpath-rs (timing only, minimal overhead)
perf = ["dep:hotpath", "hotpath/hotpath"]
# Enable memory profiling for examples (includes allocation tracking, adds overhead)
memprof = ["dep:hotpath", "hotpath/hotpath", "hotpath/hotpath-alloc"]
# Enable Apple AudioToolbox hardware decoder (macOS/iOS)
apple = ["kithara-decode/apple"]
# Disable hang-loop detection in wait loops (fallback to no-op detector)
disable-hang-detector = [
    "kithara-platform/disable-hang-detector",
    "kithara-stream/disable-hang-detector",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-util = { workspace = true, features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "AudioContext", "AudioWorkletNode", "AudioWorkletNodeOptions",
    "BaseAudioContext", "MessagePort"
] }

[dev-dependencies]
kithara-audio = { path = ".", default-features = false, features = ["internal"] }
assert_no_alloc = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
kithara-decode = { workspace = true, features = ["test-utils"] }
kithara-test-utils = { workspace = true }
tempfile = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
unimock = { workspace = true }
wasm-bindgen-test = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
axum = { workspace = true }
reqwest = { workspace = true, features = ["rustls", "stream"] }
tracing-subscriber = { workspace = true }
kithara-file = { workspace = true }
kithara-hls = { workspace = true }
kithara-assets = { workspace = true }
kithara-net = { workspace = true }
rodio = { workspace = true, features = ["playback"] }
hotpath = { workspace = true }
